tests/transpiler/x/ocaml/slice.ml
(* Generated by Mochi transpiler v0.10.33 on 2025-07-21 18:38 +0700 *)

let () =
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [String.sub [1; 2; 3] 1 (3 - 1)]));
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [String.sub [1; 2; 3] 0 (2 - 0)]));
  print_endline (String.concat " " (List.filter (fun s -> s <> "") [String.sub "hello" 1 (4 - 1)]));
